force-app/main/default/objects/Lesson__c/Lesson__c.object-meta.xml
<CustomObject>
    <description>A unit of the educational process</description>
    <label>Lesson</label>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>Lesson Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lessons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>