force-app/main/default/objects/Lesson__c/fields/AttendingStudents__c.field-meta.xml
<CustomField>
    <fullName>AttendingStudents__c</fullName>
    <label>Attending Students</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>