force-app/main/default/objects/Lesson__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Course</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Lessons can be created only for active courses</errorMessage>
        <filterItems>
            <field>Course__c.IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Lessons</relationshipLabel>
    <relationshipName>Lessons</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>