force-app/main/default/objects/Lesson__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Department</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Department__c.IsActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Lessons</relationshipLabel>
    <relationshipName>Lessons</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>