force-app/main/default/objects/Lesson__c/fields/DepartmentCourse__c.field-meta.xml
<CustomField>
    <fullName>DepartmentCourse__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Department Course</label>
    <referenceTo>DepartmentCourse__c</referenceTo>
    <relationshipLabel>Lessons</relationshipLabel>
    <relationshipName>Lessons</relationshipName>
    <type>Lookup</type>
</CustomField>