force-app/main/default/objects/Lesson__c/fields/DepartmentCourseProfessor__c.field-meta.xml
<CustomField>
    <fullName>DepartmentCourseProfessor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department Course Professor</label>
    <referenceTo>DepartmentCourseProfessor__c</referenceTo>
    <relationshipLabel>Lessons</relationshipLabel>
    <relationshipName>Lessons</relationshipName>
    <type>Lookup</type>
</CustomField>