force-app/main/default/objects/Lesson__c/fields/DepartmentProfessor__c.field-meta.xml
<CustomField>
    <fullName>DepartmentProfessor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Department Professor</label>
    <referenceTo>DepartmentProfessor__c</referenceTo>
    <relationshipLabel>Lessons</relationshipLabel>
    <relationshipName>Lessons</relationshipName>
    <type>Lookup</type>
</CustomField>