force-app/main/default/objects/Lesson__c/fields/EndTimePicklist__c.field-meta.xml
<CustomField>
    <fullName>EndTimePicklist__c</fullName>
    <label>End Time</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OrderNumber__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>LessonScheduleEnd</valueSetName>
    </valueSet>
</CustomField>