force-app/main/default/objects/Lesson__c/fields/GroupsAttending__c.field-meta.xml
<CustomField>
    <fullName>GroupsAttending__c</fullName>
    <label>Groups Attending</label>
    <summaryFilterItems>
        <field>DepartmentCourseGroupLesson__c.IsActive__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>DepartmentCourseGroupLesson__c.Lesson__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>