force-app/main/default/objects/Lesson__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <inlineHelpText>Link to the virtual conference room</inlineHelpText>
    <label>Link</label>
    <type>Url</type>
</CustomField>