force-app/main/default/objects/Lesson__c/fields/OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderNumber__c</fullName>
    <inlineHelpText>Lesson order number in the schedule</inlineHelpText>
    <label>Order Number</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>LessonScheduleNumber</valueSetName>
    </valueSet>
</CustomField>