force-app/main/default/objects/Lesson__c/fields/Professor__c.field-meta.xml
<CustomField>
    <fullName>Professor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Professor</label>
    <referenceTo>Professor__c</referenceTo>
    <relationshipLabel>Lessons</relationshipLabel>
    <relationshipName>Lessons</relationshipName>
    <type>Lookup</type>
</CustomField>