force-app/main/default/objects/Lesson__c/fields/StartDateTime__c.field-meta.xml
<CustomField>
    <fullName>StartDateTime__c</fullName>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>