force-app/main/default/objects/Lesson__c/fields/StartTimePicklist__c.field-meta.xml
<CustomField>
    <fullName>StartTimePicklist__c</fullName>
    <label>Start Time</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>OrderNumber__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>LessonScheduleStart</valueSetName>
    </valueSet>
</CustomField>