force-app/main/default/objects/Lesson__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <label>Topic</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>