force-app/main/default/objects/Lesson__c/validationRules/VR01_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>VR01_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Date__c &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Date__c</errorDisplayField>
    <errorMessage>Cannot create classes for the past date</errorMessage>
</ValidationRule>