force-app/main/default/objects/Lesson__c/validationRules/VR02_EndDateTime.validationRule-meta.xml
<ValidationRule>
    <fullName>VR02_EndDateTime</fullName>
    <active>true</active>
    <errorConditionFormula>EndDateTime__c &lt; StartDateTime__c</errorConditionFormula>
    <errorDisplayField>EndDateTime__c</errorDisplayField>
    <errorMessage>The lesson cannot end before it starts</errorMessage>
</ValidationRule>